<package format="2">
  <name>rosarnl</name>
  <version>0.0.1</version>
  <description>
    Provides a ROS interface for Adept MobileRobots ARNL navigation softare.
  </description>
  <maintainer email="reed.hedges@aedpt.com">Reed Hedges</maintainer>
  <author>Adept MobileRobots</author>
  <license> 
Copyright (c) 2014 Adept Technology Inc.
All rights reserved. 
See LICENSE.txt for rosarnl license terms.
See /usr/local/Arnl/LICENSE.txt for ARNL library license terms.
   </license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rviz</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>move_base_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>message_generation</depend>

</package>
